NetBSD Problem Report #49106

From www@NetBSD.org  Tue Aug 12 23:26:07 2014
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 04809ACEF8
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 12 Aug 2014 23:26:07 +0000 (UTC)
Message-Id: <20140812232605.935C3ACF41@mollari.NetBSD.org>
Date: Tue, 12 Aug 2014 23:26:05 +0000 (UTC)
From: davshao@gmail.com
Reply-To: davshao@gmail.com
To: gnats-bugs@NetBSD.org
Subject: panic: ehci_open: bad device speed 4
X-Send-Pr-Version: www-1.0

>Number:         49106
>Category:       kern
>Synopsis:       panic: ehci_open: bad device speed 4
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Aug 12 23:30:00 +0000 2014
>Closed-Date:    Sun Mar 08 11:29:57 +0000 2015
>Last-Modified:  Sun Mar 08 11:29:57 +0000 2015
>Originator:     David Shao
>Release:        NetBSD 7.99.1 (GENERIC) amd64
>Organization:
>Environment:
NetBSD 7.99.1 NetBSD 7.99.1 (GENERIC) #1: Mon Aug 11 15:05:44 PDT 2014 xxxxx@:/usr/obj/sys/arch/amd64/compile/GENERIC amd64
>Description:
On multiple amd64 machines with USB keyboards and USB mice using both Intel and AMD processors, latest current NetBSD 7.99.1 CVS source through:

Module Name:    src
Date:           Tue Aug 12 14:22:51 UTC 2014

Modified Files:
        src/sys/dev/usb: usb.h

Log Message:
Add a UPS_SUPER_SPEED.  From Takahiro HAYASHI.

fails to boot with messages similar to:

ehci0: handing power over low speed device on port 1 to ohci0
...
wd3: 465 GB, 969021 cyl, 16 head, 63 sec, 512 bytes/sect x 976773168 sectors
fatal breakpoint trap in supervisor mode
trap type 1 code 0 rip ffffffff80265acd cs 8 rflags 246 cr2 0 ilevel 0 rsp fffffe81d7f9cc0
curlwp 0xfffffe811d707a40 pid 0.64 lowest kstack 0xfffffe811d7f62c0
Stopped in pid 0.64 (system) at netbsd:breakpoint+0x5:  leave
>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "Nick Hudson" <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49106 CVS commit: src/sys/dev/usb
Date: Wed, 13 Aug 2014 06:26:33 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Wed Aug 13 06:26:32 UTC 2014

 Modified Files:
 	src/sys/dev/usb: uhub.c

 Log Message:
 SS device detection needs more work. #if 0 previous attempt for now.

 PR/49106: panic: ehci_open: bad device speed 4


 To generate a diff of this commit:
 cvs rdiff -u -r1.125 -r1.126 src/sys/dev/usb/uhub.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Sun, 08 Mar 2015 11:29:57 +0000
State-Changed-Why:
Fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.