SS device detection needs more work. #if 0 previous attempt for now.

PR/49106: panic: ehci_open: bad device speed 4